--- a/minoc/src/main/webapp/swagger-ui/index.html
+++ b/minoc/src/main/webapp/swagger-ui/index.html
@@ -4,46 +4,46 @@
   <meta charset="UTF-8">
   <title>Swagger UI</title>
   <link rel="icon" type="image/png"
-        href="swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
+        href="/canfar/swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
   <link rel="icon" type="image/png"
-        href="swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
-  <link href='swagger-ui/css/typography.css' media='screen'
+        href="/canfar/swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
+  <link href='/canfar/swagger-ui/css/typography.css' media='screen'
         rel='stylesheet' type='text/css'/>
-  <link href='swagger-ui/css/reset.css' media='screen' rel='stylesheet'
+  <link href='/canfar/swagger-ui/css/reset.css' media='screen' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/screen.css' media='screen' rel='stylesheet'
+  <link href='/canfar/swagger-ui/css/screen.css' media='screen' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/reset.css' media='print' rel='stylesheet'
+  <link href='/canfar/swagger-ui/css/reset.css' media='print' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/print.css' media='print' rel='stylesheet'
+  <link href='/canfar/swagger-ui/css/print.css' media='print' rel='stylesheet'
         type='text/css'/>
-  <script src='swagger-ui/lib/jquery-1.8.0.min.js'
+  <script src='/canfar/swagger-ui/lib/jquery-1.8.0.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.slideto.min.js'
+  <script src='/canfar/swagger-ui/lib/jquery.slideto.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.wiggle.min.js'
+  <script src='/canfar/swagger-ui/lib/jquery.wiggle.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.ba-bbq.min.js'
+  <script src='/canfar/swagger-ui/lib/jquery.ba-bbq.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/handlebars-2.0.0.js'
+  <script src='/canfar/swagger-ui/lib/handlebars-2.0.0.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/js-yaml.min.js'
+  <script src='/canfar/swagger-ui/lib/js-yaml.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/lodash.min.js'
+  <script src='/canfar/swagger-ui/lib/lodash.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/backbone-min.js'
+  <script src='/canfar/swagger-ui/lib/backbone-min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/swagger-ui.js'
+  <script src='/canfar/swagger-ui/swagger-ui.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/highlight.9.1.0.pack.js'
+  <script src='/canfar/swagger-ui/lib/highlight.9.1.0.pack.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/highlight.9.1.0.pack_extended.js'
+  <script src='/canfar/swagger-ui/lib/highlight.9.1.0.pack_extended.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jsoneditor.min.js'
+  <script src='/canfar/swagger-ui/lib/jsoneditor.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/marked.js'
+  <script src='/canfar/swagger-ui/lib/marked.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/swagger-oauth.js'
+  <script src='/canfar/swagger-ui/lib/swagger-oauth.js'
           type='text/javascript'></script>
 
   <style type="text/css">
@@ -67,7 +67,15 @@
   <script type="text/javascript">
     $(function ()
       {
-        var url = "service.yaml";
+        var url = window.location.search.match(/url=([^&]+)/);
+        if (url && url.length > 1)
+        {
+          url = decodeURIComponent(url[1]);
+        }
+        else
+        {
+          url = "service.json";
+        }
 
         hljs.configure({
                          highlightSizeThreshold: 5000
@@ -101,7 +109,7 @@
               window.SwaggerTranslator.translate();
             }
 
-            // addApiKeyAuthorization();
+            addApiKeyAuthorization();
           },
           onFailure: function (data)
           {
@@ -150,7 +158,7 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="${request.servletPath}">Artifact storage and management service (minoc) API</a>
+    <a id="logo" href="/docs/api/">CANFAR API Docs</a>
     <!-- <form id='api_selector'>
       <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
       <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
