--- a/minoc/src/main/webapp/index.html
+++ b/minoc/src/main/webapp/index.html
@@ -4,46 +4,46 @@
   <meta charset="UTF-8">
   <title>Swagger UI</title>
   <link rel="icon" type="image/png"
-        href="swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
+        href="http://ws-cadc.canfar.net/vault/swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
   <link rel="icon" type="image/png"
-        href="swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
-  <link href='swagger-ui/css/typography.css' media='screen'
+        href="http://ws-cadc.canfar.net/vault/swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
+  <link href='http://ws-cadc.canfar.net/vault/swagger-ui/css/typography.css' media='screen'
         rel='stylesheet' type='text/css'/>
-  <link href='swagger-ui/css/reset.css' media='screen' rel='stylesheet'
+  <link href='http://ws-cadc.canfar.net/vault/swagger-ui/css/reset.css' media='screen' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/screen.css' media='screen' rel='stylesheet'
+  <link href='http://ws-cadc.canfar.net/vault/swagger-ui/css/screen.css' media='screen' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/reset.css' media='print' rel='stylesheet'
+  <link href='http://ws-cadc.canfar.net/vault/swagger-ui/css/reset.css' media='print' rel='stylesheet'
         type='text/css'/>
-  <link href='swagger-ui/css/print.css' media='print' rel='stylesheet'
+  <link href='http://ws-cadc.canfar.net/vault/swagger-ui/css/print.css' media='print' rel='stylesheet'
         type='text/css'/>
-  <script src='swagger-ui/lib/jquery-1.8.0.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/jquery-1.8.0.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.slideto.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/jquery.slideto.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.wiggle.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/jquery.wiggle.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jquery.ba-bbq.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/jquery.ba-bbq.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/handlebars-2.0.0.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/handlebars-2.0.0.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/js-yaml.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/js-yaml.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/lodash.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/lodash.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/backbone-min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/backbone-min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/swagger-ui.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/swagger-ui.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/highlight.9.1.0.pack.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/highlight.9.1.0.pack.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/highlight.9.1.0.pack_extended.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/highlight.9.1.0.pack_extended.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/jsoneditor.min.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/jsoneditor.min.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/marked.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/marked.js'
           type='text/javascript'></script>
-  <script src='swagger-ui/lib/swagger-oauth.js'
+  <script src='http://ws-cadc.canfar.net/vault/swagger-ui/lib/swagger-oauth.js'
           type='text/javascript'></script>
 
   <style type="text/css">
@@ -68,7 +68,6 @@
     $(function ()
       {
         var url = "service.yaml";
-
         hljs.configure({
                          highlightSizeThreshold: 5000
                        });
