--- a/baldur/src/main/webapp/index.html
+++ b/baldur/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Swagger UI</title>
+    <title>baldur API</title>
     <link rel="icon" type="image/png"
           href="http://ws-cadc.canfar.net/vault/swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
     <link rel="icon" type="image/png"
@@ -149,7 +149,7 @@
 <body class="swagger-section">
 <div id='header'>
     <div class="swagger-ui-wrap">
-        <a id="logo" href="${request.servletPath}">Storage permissions service (baldur)</a>
+        <a id="logo" href="${request.servletPath}">baldur API: Storage Permissions service</a>
         <!-- <form id='api_selector'>
           <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
           <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
