fix api doc title

--- a/minoc/src/main/webapp/index.html
+++ b/minoc/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Swagger UI</title>
+  <title>minoc API</title>
   <link rel="icon" type="image/png"
         href="swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
   <link rel="icon" type="image/png"
