--- a/luskan/src/main/webapp/index.html
+++ b/luskan/src/main/webapp/index.html
@@ -81,7 +81,7 @@
         window.swaggerUi = new SwaggerUi({
           url: url,
           dom_id: "swagger-ui-container",
-          supportedSubmitMethods: ['get', 'post', 'put', 'delete', 'patch'],
+          supportedSubmitMethods: ['get'],
           onComplete: function (swaggerApi, swaggerUi)
           {
             if (typeof initOAuth == "function")
